fix: about-us spacing, body width

--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -7,6 +7,7 @@ body {
   background-color: var(--white);
   color: var(--black);
   position: relative;
+  min-width: 375px;
 }
 
 .section-headline {
